--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "帮助")%>
+<h1>Micropost</h1>
+<p>
+  帮助
+  <a href="http://#">Micropost</a>
+</p>
