--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "主页")%>
+<h1>Micropost</h1>
+<p>
+  主页
+  <a href="http://#">Micropost</a>
+</p>
