--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, "主页")%>
-<h1>Micropost</h1>
-<p>
-  主页
-  <a href="http://#">Micropost</a>
+<div class="center jumbotron">
+  <h1>欢迎访问Micropost</h1>
+  <%= link_to "注册", signup_path, class: "btn btn-lg btn-primary" %>
 </p>
+</div>
+<%= link_to image_tag("rails.png", alt: "Rails logo"), "http://rubyonrails.org/" %>
