--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,18 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
-	<%= render "layouts/rails_default" %>
+	  <%= render "layouts/rails_default" %>
     <%= render "layouts/shim" %>
   </head>
   <body>
     <%= render "layouts/header" %>
     <div class="container">
+      <% flash.each do |msg_type, msg| %>
+        <%= content_tag(:div, msg, class: "alert alert-#{msg_type}") %>
+      <% end %>
       <%= yield %>
-	  <%= render "layouts/footer" %>
+	    <%= render "layouts/footer" %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
