--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,18 @@
 <% provide(:title, "注册")%>
 <h1>注册</h1>
-<p>
-  注册一个新用户
-  <a href="http://#">Micropost</a>
-</p>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user, url: signup_path) do |f| %>
+     <%= render "shared/error_messages"%>
+     <%= f.label :name, "用户名:" %>
+     <%= f.text_field :name, class: "form-control" %>
+     <%= f.label :email, "邮箱:" %>
+     <%= f.text_field :email, class: "form-control" %>
+     <%= f.label :password, "密码:" %>
+     <%= f.password_field :password, class: "form-control" %>
+     <%= f.label :password_confirmation, "确认密码:" %>
+     <%= f.password_field :password_confirmation, class: "form-control" %>
+     <%= f.submit "注册", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
