--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "信息", current_user %></li>
-              <li><%= link_to "配置", "#" %></li>
+              <li><%= link_to "配置", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "退出", logout_path, method: "delete" %>
