--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,8 @@
 <% provide(:title, "注册")%>
+<% provide(:button_text, "注册")%>
 <h1>注册</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user, url: signup_path) do |f| %>
-     <%= render "shared/error_messages"%>
-     <%= f.label :name, "用户名:" %>
-     <%= f.text_field :name, class: "form-control" %>
-     <%= f.label :email, "邮箱:" %>
-     <%= f.text_field :email, class: "form-control" %>
-     <%= f.label :password, "密码:" %>
-     <%= f.password_field :password, class: "form-control" %>
-     <%= f.label :password_confirmation, "确认密码:" %>
-     <%= f.password_field :password_confirmation, class: "form-control" %>
-     <%= f.submit "注册", class: "btn btn-primary" %>
-    <% end %>
+    <%= render "form" %>
   </div>
 </div>
