--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,4 @@
-<h1>User#password_reset</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<h1>Micropost</h1>
+<p>Hi <%= @user.name %>,</p>
+<p>请点击下面的地址帐号密码(15分钟有效)：</p>
+<%= link_to "密码重置", edit_password_reset_url(@user.reset_token, email: @user.email) %>
