--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,3 @@
-User#password_reset
-
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+Hi <%= @user.name %>
+请点击下面的地址重置帐号密码(15分钟有效)：
+<%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
