--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,24 @@
 <% provide(:title, "主页")%>
-<div class="center jumbotron">
-  <h1>欢迎访问Micropost</h1>
-  <%= link_to "注册", signup_path, class: "btn btn-lg btn-primary" %>
-</p>
-</div>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/micropost_form" %>
+      </section>
+    </aside>
+    <div class="clo-md-8">
+      <h3>Micropost Feed</h3>
+      <%= render "shared/feed" %>
+    </div>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1>欢迎访问Micropost</h1>
+    <%= link_to "注册", signup_path, class: "btn btn-lg btn-primary" %>
+  </p>
+  </div>
+<% end %>
 <%= link_to image_tag("rails.png", alt: "Rails logo"), "http://rubyonrails.org/" %>
