--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
   <div class="col-md-6 col-md-offset-3">
     <%= render "form" %>
     <div calss="gravatar_edit">
-      <%= gravator_for(@user) %>
+      <%= gravatar_for(@user) %>
       <a href="" target="_blank"></a>
     </div>
   </div>
