--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render "form" %>
-    <div calss="gravatar_edit">
+    <div class="gravatar_edit">
       <%= gravatar_for(@user) %>
       <a href="" target="_blank"></a>
     </div>
